# blook

./: .gitignore  README.md  pyproject.toml
conf/: demo.env
src/: app.py
src/app_auth/: __init__.py  models.py
src/app_auth/v1/: __init__.py  routes.py
src/app_demo/: __init__.py  models.py  schemas.py
src/app_demo/v1/: __init__.py  routes.py
src/app_mcp/: __init__.py  models.py  schemas.py  services.py  utils.py
src/app_mcp/v1/: __init__.py  routes.py
src/common/: deps.py  docs.py
src/common/core/: config.py  exceptions.py  logging.py  response.py  security.py
src/common/core/database/: interfaces.py
src/common/core/dependencies/: __init__.py
src/common/helpers/: page_helper.py
src/components/: __init__.py
src/infrastructure/: __init__.py  base.py  container.py  loader.py  manager.py
src/infrastructure/cache/: __init__.py
src/infrastructure/celery/: celery_app.py  decorators.py  dependencies.py  lifespan.py  manager.py  plugin.py  task_manager.py
src/infrastructure/database/: __init__.py  base.py  curd.py  dependencies.py  factory.py  interfaces.py  manager.py  orm_registry.py  plugin.py  repositories.py
src/infrastructure/queue/: __init__.py  base.py
src/infrastructure/queue/impl/: redis.py
src/infrastructure/redis/: lifespan.py  manager.py
src/infrastructure/scheduler/: __init__.py
src/infrastructure/storage/: __init__.py  base.py
src/infrastructure/vector/: __init__.py  base.py  factory.py  plugin.py  vector_registry.py
src/infrastructure/vector/impl/: weaviate_register.py
src/tools/: __init__.py
(+6 files in other folders)
