[project]
name = "blook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "mcp>=1.12.1",
    "numpy>=2.2.2",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "pymilvus>=2.5.4",
    "pymupdf>=1.25.2",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
]
